LPS-66873 Read JUnit JVM args from properties